After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746918 - [PATCH] bridge/bond/team: device availability shouldn't depend on IFF_UP
[PATCH] bridge/bond/team: device availability shouldn't depend on IFF_UP
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: IP and DNS config
unspecified
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks: nm-review
 
 
Reported: 2015-03-27 22:46 UTC by Dan Williams
Modified: 2015-04-02 20:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-bridge-bond-team-device-availability-shouldn-t-depen.patch (2.79 KB, patch)
2015-03-27 22:47 UTC, Dan Williams
none Details | Review

Description Dan Williams 2015-03-27 22:46:15 UTC
The merge of lr/udev-unmanaged-fd731014 made all devices wait until
udev found them, but that makes these three device types fail activate
when created by NM itself.

Since their availability depended on IFF_UP, they could not be
activated (eg, 'nmcli con up team0') until they were IFF_UP.  But
when they are created by NM, although NM knows the ifindex the
platform ignores the interface until udev finds it.  Thus immediately
after creating the interface in _internal_activate_device() it
won't be known to the platform, so the nm_device_is_available()
check that controls whether the device moves to DISCONNECTED
will fail.  This prevents any activation and emits the message:

"Connection 'foo' is not available on the device %s at this time."

because the device is still in the UNAVAILABLE state.

danw asked why we care about IFF_UP for these devices, and I can't
remember why, and I don't think it makes sense to require now.
Comment 1 Dan Williams 2015-03-27 22:47:01 UTC
Created attachment 300499 [details] [review]
0001-bridge-bond-team-device-availability-shouldn-t-depen.patch
Comment 2 Thomas Haller 2015-03-29 18:45:12 UTC
(In reply to Dan Williams from comment #1)
> Created attachment 300499 [details] [review] [review]
> 0001-bridge-bond-team-device-availability-shouldn-t-depen.patch

looks right to me
Comment 3 Dan Williams 2015-04-02 20:27:23 UTC
Pushed to git master.